# path

./: .bandit  .editorconfig  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .stats.yml  .vercelignore  .yamllint  AGENTS.md  API.md  API_KEY_TEST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SOFTWARE_PHILOSOPHY.txt  api.md  app.js  app.py  app_local.py  build.sh  docker-compose.yml  eslint.config.mjs  harper_openapi_spec.json  jest.config.ts  main.js  package-lock.json  package.json  playwright.config.js  preview.mov  pyproject.toml  readme.md  release-please-config.json  requirements-dev.txt  requirements-py314-minimal.txt  requirements-py314.txt  (+12 more)
.changeset/: many-years-sip.md
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: SECURITY.md  codeql-config.yml  dependabot.yml  labeler.yml  pull_request_template.md
api/: app.py  index.py  requests_vendor.py  requirements.txt
docs/: DEPLOYMENT.md
e2e/: navigation.spec.js  search.spec.js  utils.js  verification.spec.js
path/: README.md  app.py  index.py  requirements.txt  test_app.py
rust/: .env.example  Cargo.toml  README.md  harper-tui.mov
rust/src/: main.rs
scripts/: bootstrap  build  check-unused.py  cleanup.sh  commit-msg  deploy-path.sh  mock  prepare-deployment.py  rename-api-to-path.sh  rewrite_msg.sh  test  validate-vercel.sh
shared/: errors.py  prompts.py  requests_fallback.py  verification.py
src/: client.ts  index.ts
templates/: about.html  blog.html  coders.html  downloads.html  gmail.html  help.html  (+10 more)
(+50 files in other folders)
