[package]
name = "harper"
version = "0.1.0"
edition = "2021"
description = "CLI for Harper - AI-powered media exploration"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
